src/test/deca/context/invalid/variable_type_void.deca
// Description :
// Declaration d'une variable de type void donc impossible 

// Resultats :
// Echec

{
    void tacle;
}
